Database setup and data imported

--- a/Frontend/src/app/components/compound-list/compound-list.component.html
+++ b/Frontend/src/app/components/compound-list/compound-list.component.html
@@ -1,4 +1,4 @@
-<div class="compounds-container">
+<!-- <div class="compounds-container">
     <a
       class="compound-card"
       *ngFor="let compound of compounds"
@@ -8,4 +8,4 @@
       <h2 class="compound-title">{{ compound.name }}</h2>
     </a>
   </div>
-  
+   -->
