--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,3 +1,5 @@
-@import "@angular/material/prebuilt-themes/indigo-pink.css";
+/* styles.css */
+@import "@angular/material/prebuilt-themes/indigo-pink.css"; /* or one of the other themes */
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
