--- a/Frontend/src/app/components/compound-list/compound-list.component.html
+++ b/Frontend/src/app/components/compound-list/compound-list.component.html
@@ -1,11 +1,22 @@
-<!-- <div class="compounds-container">
-    <a
-      class="compound-card"
-      *ngFor="let compound of compounds"
-      [href]="'/compound/' + compound.id"
-    >
-      <img [src]="compound.image" alt="{{ compound.name }}" class="compound-image" />
-      <h2 class="compound-title">{{ compound.name }}</h2>
-    </a>
-  </div>
-   -->
+<div class="compound-list">
+  <mat-grid-list cols="3" rowHeight="1:1">
+    <mat-grid-tile *ngFor="let compound of compounds">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{ compound.name }}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image [src]="compound.imageSource" alt="{{ compound.name }}">
+        <mat-card-content>
+          <p>{{ compound.description }}</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+  <mat-paginator
+    [length]="totalItems"
+    [pageSize]="itemsPerPage"
+    [pageSizeOptions]="[6]"
+    (page)="onPageChange()">
+  </mat-paginator>
+</div>
