--- a/Frontend/src/app/components/landing-page/landing-page.component.html
+++ b/Frontend/src/app/components/landing-page/landing-page.component.html
@@ -1,14 +1,17 @@
-<div class="landing-page-container">
-    <mat-card class="landing-card">
-      <mat-card-title>Welcome to Compound Lookup</mat-card-title>
-      <mat-card-content>
-        <p>Discover detailed information about various chemical compounds at your fingertips.</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <a mat-button color="primary" routerLink="/compounds" class="view-compounds-button">
-          <mat-icon>search</mat-icon> View Compounds
+<div class="container landing-page-container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6 text-center">
+
+      <p class="card-heading">Welcome to Compound Lookup</p>
+      <p class="">
+        Discover detailed information about various chemical compounds at your fingertips.
+      </p>
+      <div class="mt-3">
+
+        <a href="/compounds" class="btn btn-primary view-compounds-button">
+          <i class="bi bi-search"></i> View Compounds
         </a>
-      </mat-card-actions>
-    </mat-card>
+      </div>
+    </div>
   </div>
-  
+</div>
