--- a/Frontend/src/app/components/compound-list/compound-list.component.html
+++ b/Frontend/src/app/components/compound-list/compound-list.component.html
@@ -6,7 +6,7 @@
         <img class="img-fluid card-img p-5" [src]="compound.imageSource" [alt]="compound.name">
         <div class="card-body">
           <h2 class="text-center">{{ compound.name }}</h2>
-          <p class="card-text">{{ compound.description }}</p>
+          <!-- <p class="card-text">{{ compound.description }}</p> -->
         </div>
       </a>
     </div>
